# suna-bim-agent

./: .env.dokploy  .gitignore  .opencode.json  .pre-commit-config.yaml  .secrets.baseline  2026-03-17-021928-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  DEPLOY.md  Dokploy id_rsa (1).txt  Makefile  README.md  SECURITY.md  copilot-session-1a52fbb2-4b9b-401f-b509-872cc68d41e1.md  docker-compose.dokploy.yml  docker-compose.prod.yaml  docker-compose.yaml  e2e-test-report.md  package.json  pnpm-lock.yaml  setup.py  start.py
backend/: .env.example  .gitignore  .secrets.baseline  Dockerfile  Makefile  README.md  api.py  check_wal_health.py  docker-compose.yml  pyproject.toml  test_llm.py
backend/auth/: api.py
backend/core/admin/: __init__.py  admin_api.py  analytics_admin_api.py  billing_admin_api.py  feedback_admin_api.py  feedback_repo.py  notification_admin_api.py  repo.py  sandbox_pool_admin_api.py  stateless_admin_api.py  stress_test_admin_api.py  system_status_admin_api.py
backend/core/agentpress/: context_manager.py  error_processor.py  mcp_registry.py  native_tool_parser.py  processor_config.py  prompt_caching.py  tool.py  tool_registry.py  xml_tool_parser.py
backend/core/agents/: __init__.py  agent_crud.py  agent_json.py  agent_loader.py  agent_service.py  agent_setup.py  agent_tools.py  api.py  config.py  repo.py
backend/core/ai_models/: __init__.py  models.py  registry.py
backend/core/analytics/: conversation_analytics_worker.py  conversation_analyzer.py  use_case_clustering.py
backend/core/api_models/: __init__.py  agents.py  common.py  imports.py  threads.py
backend/core/auth/: __init__.py  auth.py
backend/core/billing/: __init__.py  api.py
backend/core/bim/: api.py  async_ifc_parser.py
backend/core/cache/: __init__.py  runtime_cache.py
backend/core/categorization/: __init__.py  api.py  background_jobs.py  service.py
backend/core/composio_integration/: __init__.py  api.py  auth_config_service.py  client.py  composio_profile_service.py  composio_service.py  composio_trigger_service.py  connected_account_service.py  mcp_server_service.py  toolkit_service.py  trigger_schema.py
backend/core/config/: __init__.py  config_helper.py  suna_config.py  vapi_config.py
backend/core/credentials/: __init__.py  api.py  credential_service.py  profile_service.py  repo.py  utils.py
backend/core/endpoints/: __init__.py  account_deletion.py  accounts_api.py  accounts_repo.py  apify_approvals_api.py  export_api.py  feedback.py  file_uploads_api.py  system_status_api.py  tools_api.py  user_roles_api.py  user_roles_repo.py  vapi_api.py  vapi_webhooks.py
backend/core/files/: upload_handler.py  url_refresh.py
backend/core/google/: google_docs_api.py  google_docs_service.py  google_slides_api.py  google_slides_service.py
backend/core/jit/: __init__.py  config.py  dependencies.py  detector.py  function_map.py  loader.py  mcp_loader.py  mcp_registry.py  mcp_tool_wrapper.py  result_types.py  tool_cache.py
backend/core/knowledge_base/: api.py  file_processor.py  validation.py
backend/core/mcp_module/: __init__.py  api.py  mcp_service.py
backend/core/memory/: __init__.py  api.py  background_jobs.py  embedding_service.py  extraction_service.py  models.py  repo.py  retrieval_service.py
backend/core/monitoring/: __init__.py  health.py  sentry.py
backend/core/notifications/: __init__.py  api.py  models.py  notification_service.py  novu_service.py  presence_api.py  presence_repo.py  presence_service.py
backend/core/prompts/: core_prompt.py  memory_extraction_prompt.py
backend/core/referrals/: __init__.py  api.py  config.py  service.py
backend/core/resources/: __init__.py  resource_service.py  resource_types.py
backend/core/sandbox/: README.md  api.py  canvas_ai_api.py  pool_background.py  pool_config.py  pool_repo.py  pool_service.py  resolver.py  sandbox.py  tool_base.py
backend/core/services/: api_keys.py  api_keys_api.py  credits.py  db.py  email.py  http_client.py  langfuse.py  llm.py  orphan_cleanup.py  redis.py  supabase.py  system_metrics.py  system_status.py  transcription.py  voice_generation.py  worker_metrics.py
backend/core/setup/: api.py  (+1 more)
backend/evals/: README.md  __init__.py  agent_eval.py  datasets.py  eval_simple.py  runner.py  scorers.py  test_cases.json  test_quick.py  test_simple.py
backend/scripts/: archive_pool_sandboxes.py  cleanup_zombie_runs.py  create_sandbox_pool.py  dump_thread_messages.py
backend/supabase/: config.toml  email-template.html
backend/tests/: README.md  __init__.py  config.py  conftest.py  sandbox_resolver_test.py  sandbox_timing_test.py  test_async_ifc_parser.py  test_bim_dependencies.py  test_bim_tools.py  test_caching.py  test_env_validation.py  test_monitoring.py  test_security.py
(+1339 files in other folders)
