[project]
name = "carbon-bim"
version = "1.0"
description = "platform to build, manage and train AI Agents"
authors = [{ name = "marko-kraemer", email = "mail@markokraemer.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache-2.0 License",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.0.1",
  "litellm>=1.80.11",
  "click==8.1.7",
  "questionary==2.0.1",
  "requests==2.32.3",
  "packaging==24.1",
  "setuptools==75.3.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "pytest-env==1.1.5",
  "pytest-mock==3.14.0",
  "pytest-xdist==3.3.0",
  "pytest-timeout==2.3.1",
  "pytest-randomly==3.12.0",
  "pytest-rerunfailures==10.2.0",
  "asyncio==3.4.3",
  "altair==4.2.2",
  "prisma==0.15.0",
  "fastapi==0.115.12",
  "uvicorn==0.27.1",
  "python-multipart==0.0.20",
  "redis==5.2.1",
  "upstash-redis==1.3.0",
  "supabase==2.17.0",
  "pyjwt==2.10.1",
  "e2b-code-interpreter==1.2.0",
  "certifi>=2025.4.26",
  "python-ripgrep==0.0.6",
  "daytona-sdk>=0.115.0",
  "daytona-api-client>=0.115.0",
  "daytona-api-client-async>=0.115.0",
  "boto3>=1.40.74",
  "openai>=1.99.5",
  "nest-asyncio==1.6.0",
  "vncdotool==1.2.0",
  "tavily-python==0.5.4",
  "pytesseract==0.3.13",
  "stripe==11.6.0",
  "phonenumbers==8.13.50",
  "prometheus-client==0.21.1",
  "langfuse==2.60.5",
  "Pillow>=10.4.0",
  "vtracer>=0.6.0",
  "replicate>=0.25.0",
  "mcp==1.9.4",
  "aiohttp==3.12.0",
  "httpx>=0.27.0",
  "email-validator==2.0.0",
  "mailtrap==2.0.1",
  "gunicorn>=23.0.0",
  "cryptography>=41.0.0",
  "apscheduler>=3.10.0",
  "croniter>=1.4.0",
  "structlog==25.4.0",
  "PyPDF2==3.0.1",
  "python-docx==1.1.0",
  "openpyxl==3.1.2",
  "chardet==5.2.0",
  "PyYAML==6.0.1",
  "composio>=0.8.0",
  "python-pptx>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "weasyprint>=63.0",
  "cssutils>=2.9.0",
  "fastapi-sso>=0.9.0",
  "daytona>=0.21.6",
  "google-api-python-client>=2.120.0",
  "google-auth>=2.28.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  "typing-extensions==4.15.0",
  "svglib==1.5.1",
  "chunkr-ai>=0.3.7",
  "reportlab>=4.0.0",
  "freestyle>=0.0.17",
  "anthropic>=0.69.0",
  "novu-py>=3.11.0",
  "psutil>=5.9.0",
  "google-analytics-data>=0.18.0",
  "realitydefender>=0.1.10",
  "apify-client==2.3.0",
  "paramiko>=3.4.0",
  "braintrust>=0.3.15",
  "autoevals>=0.0.130",
  "huggingface-hub>=0.34.4",
  "datasets>=4.4.2",
  "orjson>=3.11.1", # Moved from dev - 3-5x faster JSON serialization for hot paths
  "watchtower>=3.0.0", # CloudWatch Logs handler
  "psycopg[binary]>=3.3.2",
  "sqlalchemy>=2.0.45",
  "greenlet>=3.3.0",
  "sentry-sdk[fastapi]>=2.55.0",
]

[project.optional-dependencies]
# BIM analysis tools — IFC parsing, geometry, and carbon calculation
# Install with: uv sync --extra bim
bim = [
  "ifcopenshell>=0.7.0",     # IFC file parsing and BIM data extraction
  "numpy>=1.24.0",           # Numerical operations for geometry calculations
  "networkx>=3.0",           # Graph analysis for BIM relationships
  "ladybug-core>=0.41.0",    # Environmental analysis and energy modeling
]

[project.urls]
homepage = "https://www.carbon-bim.com"
repository = "https://github.com/khiwniti/carbon-bim-agent"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "detect-secrets>=1.4.0",  # Secrets scanning for pre-commit and CI
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: Full end-to-end tests",
    "slow: Tests taking >30s",
    "large_context: Tests with large token contexts (200k+)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:Field name.*shadows an attribute in parent:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E402",   # Module level import not at top of file (needed for Sentry init)
    "F401",   # Imported but unused (some imports needed for FastAPI dependency injection)
    "I001",   # Import block is un-sorted (api.py has intentional import order)
    "SIM105", # Use contextlib.suppress (not always clearer in async code)
    "UP017",  # Use datetime.UTC (timezone.utc is more compatible)
    "B904",   # raise from err (not always appropriate in API error handling)
    "E501",   # Line too long (logging lines often need to be longer)
    "W293",   # Blank line contains whitespace (minor formatting issue)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]
